Fix: clipped dropdown in style selection (closes #239)

--- a/csComp/includes/css/csStyles.css
+++ b/csComp/includes/css/csStyles.css
@@ -240,7 +240,7 @@ html, body, #container {
   display: inline;
   font-size: 13px;
   position: absolute;
-  left: 55px; }
+  left: 40px; }
 
 /* End StyleList */
 /* Start OfflineSearch */
